--- a/includes/header.html
+++ b/includes/header.html
@@ -52,24 +52,24 @@
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
                     <a href="index.html" class="logo">
-                        <img src="./assets/images/logo.png" alt="">
+                        <img src="./assets/images/logo.svg" alt="">
                     </a>
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
-                    <ul class="nav">
-                        <li><a href="index.html" class="active">代表メッセージ</a></li>
-                        <li><a href="properties.html">四半期査定について</a></li>
-                        <li><a href="property-details.html">しごとナビ</a></li>
-                        <li><a href="contact.html">会社情報</a></li>
-                        <li><a href="#">各事業所のご紹介</a></li>
-                        <li><a href="#">トレーナーのご紹介</a></li>
-                        <li><a href="#">リーダー昇格者のご紹介</a></li>
-                        <li><a href="#">転職成功者の声</a></li>
-                        <li><a href="#">個人情報保護方針・取り扱い</a></li>
-                        <li><a href="#">派遣法に基づく公開情報</a></li>
-                        <li><a href="#">派遣スタッフ就業規則</a></li>
-                        <li><a href="#">お問い合わせ</a></li>
-                    </ul>
+                        <ul class="nav">
+                            <li><a href="index.html#message" class="active">代表メッセージ</a></li>
+                            <li><a href="index.html#quarterly-assessment">四半期査定について</a></li>
+                            <li><a href="index.html#shigotonavi">しごとナビ</a></li>
+                            <li><a href="index.html#company-info">会社情報</a></li>
+                            <li><a href="index.html#offices">各事業所のご紹介</a></li>
+                            <li><a href="index.html#trainers">トレーナーのご紹介</a></li>
+                            <li><a href="index.html#leaders">リーダー昇格者のご紹介</a></li>
+                            <li><a href="index.html#voices">転職成功者の声</a></li>
+                            <li><a href="lis_person_policy.html">個人情報保護方針・取り扱い</a></li>
+                            <li><a href="lis_haken.html">派遣法に基づく公開情報</a></li>
+                            <li><a href="Labor-regulations.html">派遣スタッフ就業規則</a></li>
+                            <li><a href="inquiry.html">お問い合わせ</a></li>
+                        </ul>
                     <a class='menu-trigger'>
                         <span>Menu</span>
                     </a>
