--- a/includes/header.html
+++ b/includes/header.html
@@ -24,7 +24,8 @@
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                            <li><a href="index.html#message" class="active">代表メッセージ</a></li>
+                            <li><a href="index.html" class="active">ホーム</a></li>
+                            <li><a href="index.html#message">代表メッセージ</a></li>
                             <li><a href="index.html#quarterly-assessment">四半期査定について</a></li>
                             <li><a href="index.html#shigotonavi">しごとナビ</a></li>
                             <li><a href="index.html#company-info">会社情報</a></li>
