--- a/includes/footer.html
+++ b/includes/footer.html
@@ -21,6 +21,7 @@
                     <div class="footer-column">
                         <h4>メニュー</h4>
                         <ul>
+                            <li><a href="index.html">ホーム</a></li>
                             <li><a href="index.html#message">代表メッセージ</a></li>
                             <li><a href="index.html#shigotonavi">しごとナビ</a></li>
                             <li><a href="index.html#quarterly-assessment">四半期査定について</a></li>
